release/kong/kong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong
  labels:
    app: kong
spec:
  selector:
    matchLabels:
      app: kong
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        traffic.sidecar.istio.io/includeInboundPorts: "4242"
      labels:
        app: kong
    spec:
      securityContext:
        runAsUser: 1000
      containers:
      - name: kong
        image: kong
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: kongdeclarative
            mountPath: /kong
        ports:
        - name: data-http
          containerPort: 8000
        - name: data-https
          containerPort: 8443
        readinessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 20
      volumes:
      - name: kongdeclarative
        configMap:
          name: kongconfig
---
apiVersion: v1
kind: Service
metadata:
  name: kong
spec:
  type: LoadBalancer
  ports:
  - name: kong-proxy-http
    port: 80
    targetPort: 8000
    protocol: TCP
  - name: kong-proxy-https
    port: 443
    targetPort: 8443
    protocol: TCP
  selector:
    app: kong
